k8s/03-bird-image-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bird-image-api
  namespace: bird-apis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bird-image-api
  template:
    metadata:
      labels:
        app: bird-image-api
    spec:
      containers:
      - name: bird-image-api
        image: username/bird-image-api:latest
        ports:
        - containerPort: 4200
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
