k8s/02-bird-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bird-api
  namespace: bird-apis
spec:
  selector:
    app: bird-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4201
  type: LoadBalancer
