k8s/04-bird-image-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bird-image-api
  namespace: bird-apis
spec:
  selector:
    app: bird-image-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
  type: LoadBalancer
